[package]
name = "wumpusd"
version = "0.1.0"
authors = ["Kevin Liu <kevin@kliu.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
inotify = "0.9.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
xdg = "2.2.0"
