[package]
name = "cogd"
version = "0.1.0"
authors = ["Kevin Liu <kevin@kliu.io>"]
edition = "2018"
default-run = "cogd"

[[bin]]
name = "cogd"

[[bin]]
name = "cog"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
futures = "0.3.15"
inotify = "0.9.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
tokio = { version = "1.6.0", features = ["full"] }
tokio-util = "0.6.7"
xdg = "2.2.0"